--- a/main.css
+++ b/main.css
@@ -1,42 +1,7 @@
-body {
-    color:white;
-    background-color:black;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-m2-header {
-    text-align: center;
-    width:100%;
-}
-
-.main {
-    text-align: center;
-}
-
-#title {
-    font-size: 4em;
-}
-
-h3 {
-    text-align: left;
-}
-
-iframe {
-    width: 66vw;
-    height: calc(66vw * 0.5625); /* 16:9 */
-}
-
-img {
-    max-width: 100%;
-    height:auto;
-}
-
-pre {
-    background-color: black;
-    color:white;
-    text-align: left;
-}
-
-li {
-    text-align: left;
-}
+<style type="text/css">
+body {background-color:330000;background-image:url(https://www.christian.art/admin/uploaded_files/48047-Gadarene%20swine%20Briton%20Riviere%20Matthew%208.jpg);background-repeat:repeat;background-position:top left;background-attachment:fixed;}
+table, tr, td {background:transparent; border:0px;}table table {border:0px;}table table table table {border:0px;}table table table {background-color:FFFF99;border-width:3;border-style:solid;border-color:990033;}
+td, span, div, input, a, table td div div font, body div table tbody tr td font {font-family:Arial;font-size:14pt;color:000000;}
+a {color:000099;}
+</style>
+<br />
